# soc_fgo_paper2

./: .gitignore  CMakeLists.txt  README.md  SOCProcessFactor.h  SOCVoltageFactor.h  SOCVoltageFactorNonlinear.h  add_bias.py  add_noise.py  calc_bias005.py  calc_bias_all.py  calc_metrics.py  calc_metrics_noise003.py  calc_metrics_noise005.py  calc_metrics_noise010.py  calc_metrics_paper2.py  calc_metrics_paper2_all.py  calc_metrics_random.py  main.cpp  main_clean.cpp  main_nonlinear.cpp  paper2_draft_for_teacher.html  plot_bias100_soc.py  plot_bias_rmse.py  plot_paper1_figures.py  sensor_data_3000s.csv  sensor_data_random_12000s.csv
data/: nasa_B0005_bias000.csv  nasa_B0005_bias005.csv  nasa_B0005_bias010.csv  nasa_B0005_discharge_cycle_1.csv  paper2_bias005.csv  paper2_bias010.csv  paper2_bias020.csv  paper2_bias050.csv  paper2_bias100.csv  paper2_clean_base.csv  paper2_noise003.csv  paper2_noise005.csv  paper2_noise010.csv
manuscript/: cleanup_paper2_structure.py  fix_conclusion_bias_focus.py  fix_introduction_bias_focus.py  make_teacher_html.py  make_teacher_html_selfcontained.py  paper2_draft_before_abstract_update.md  paper2_draft_before_conclusion_bias_focus.md  paper2_draft_before_conclusion_update.md  paper2_draft_before_intro_bias_focus.md  paper2_draft_before_structure_cleanup.md  paper2_draft_for_teacher_selfcontained.html  paper2_draft_v1.md  paper2_draft_with_nasa_final_v1.md  paper2_draft_with_nasa_v1.md  reorder_nasa_section.py  update_abstract.py  update_conclusion.py
results/: nasa_B0005_cc_bias000.csv  nasa_B0005_cc_bias005.csv  result_case1.csv  (+31 more)
(+1 files in other folders)
